tests/error/hash_from_macro_expansion_should_not_be_directive.c
// fail "Error at '#': Expected a type."

#define arst(a) a error arst

// Make sure it does not except this as an #error directive
arst(#)

int main(){
}
